# Stratus

./: .gitignore  README.md  agent.example.json  agent.go  go.mod  main.go  render.yaml  shutdown_darwin.go  shutdown_linux.go  shutdown_windows.go
.github/workflows/: release.yml
cmd/controller/: auth.py  database.py  main.py  main_public.py  models.py  pyproject.toml  schemas.py
cmd/controller/routers/: events.py  heartbeat.py  invite.py  login.py  nodes.py
dashboard/app/: layout.tsx  page.tsx
dashboard/app/join/[token]/: page.tsx
dashboard/app/login/: page.tsx
dashboard/components/: CopyButton.tsx  InviteModal.tsx  NodeCard.tsx
dashboard/lib/: api.ts
