[project]
name = "controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.39.0",
]
